add /voicechat/rooms, fix unmarshaling
