# src/modules/voicechat/models/http-models.go
@@ -9,7 +9,6 @@ type WsAction string
 type Response struct {
 	Message string `json:"message"`
 	Data    any    `json:"data,omitempty"`
-	Error   error  `json:"error,omitempty"`
 }
 
 type CreateRoomReqBody struct {
@@ -21,4 +20,9 @@ type CreateRoomReqBody struct {
 type CreateRoomRespBody struct {
 	RoomId   string `json:"room_id"`
 	RoomName string `json:"room_name"`
+}
+
+type GetRoomsListRespBody struct {
+	Response
+	Data []VoiceRoom `json:"data"`
 }
