# src/modules/voicechat/routes.go
@@ -5,5 +5,5 @@ import "net/http"
 func (m *VoicechatModule) SetRoutes() {
 	m.api.HandleFunc("/voicechat/create", m._createRoomHandler).Methods(http.MethodPost)
 	m.api.HandleFunc("/voicechat/connect", m._connectToRoomHandler).Methods(http.MethodGet)
-
+	m.api.HandleFunc("/voicechat/rooms", m._getRoomsListHandler).Methods(http.MethodGet)
 }
